<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/high_five"
        android:layout_marginTop="100dp"
        android:layout_width="150dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/img_1" />

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:columnCount="3"
        android:rowCount="2">

        <Button
            android:id="@+id/Move_left"
            android:layout_width="130dp"
            android:layout_height="48dp"
            android:layout_row="0"
            android:layout_column="0"
            android:text="@string/move_left"
            android:textStyle="bold" />

        <Button
            android:id="@+id/Move_Right"
            android:layout_width="130dp"
            android:layout_height="48dp"
            android:layout_row="0"
            android:layout_column="1"
            android:text="@string/move_right"
            android:textStyle="bold" />

        <Button
            android:id="@+id/Zoom_In"
            android:layout_width="130dp"
            android:layout_height="48dp"
            android:layout_row="0"
            android:layout_column="2"
            android:text="@string/zoom_in"
            android:textStyle="bold" />

        <Button
            android:id="@+id/Zoom_Out"
            android:layout_width="130dp"
            android:layout_height="48dp"
            android:layout_row="1"
            android:layout_column="0"
            android:text="@string/zoom_out"
            android:textStyle="bold"
            tools:ignore="TextSizeCheck" />

        <Button
            android:id="@+id/Alpha"
            android:layout_width="130dp"
            android:layout_height="48dp"
            android:layout_row="1"
            android:layout_column="1"
            android:text="@string/alpha"
            android:textStyle="bold" />

        <Button
            android:id="@+id/Rotate_Rightt"
            android:layout_width="130dp"
            android:layout_height="48dp"
            android:layout_row="1"
            android:layout_column="2"
            android:text="@string/rotate_right"
            android:textStyle="bold" />

        <Button
            android:id="@+id/Rotate_Left"
            android:layout_width="130dp"
            android:layout_height="48dp"
            android:text="@string/rotate_left"
            android:textStyle="bold" />

    </GridLayout>
</LinearLayout>
